fix(ui): align mobile input outline (#1991)
mobile input field does not have outline

--- a/packages/ui/src/components/Passcode/index.module.scss
+++ b/packages/ui/src/components/Passcode/index.module.scss
@@ -16,6 +16,7 @@
 
     &:focus {
       border: _.border(var(--color-primary));
+      outline: none;
     }
 
     &::placeholder {
